# KotlinizedMCP

./: .gitignore  CMakeLists.txt  Evanescent.json  LICENSE  LICENSE.md  README.md  build.gradle.kts  gradle.properties.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: outdated-or-vulnerable-component-report.md
.github/workflows/: build.yml
evanescent/kotlin/annotations/: ComponentDevelopmentAnnotations.kt  ComponentStateAnnotations.kt
evanescent/kotlin/movement/: AutoSprint.kt
gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp
src/main/java/javax/vecmath/: Matrix4f.java  Matrix4f.kt
src/main/java/net/minecraft/block/: Block.java  BlockAir.java  BlockAnvil.java  BlockBanner.java  BlockBarrier.java  BlockBasePressurePlate.java  BlockBeacon.java  BlockBed.java  BlockBookshelf.java  BlockBreakable.java  BlockBrewingStand.java  BlockBush.java  BlockButton.java  BlockCactus.java  BlockCake.java  BlockCarpet.java  BlockCauldron.java  BlockChest.java  BlockClay.java  BlockCocoa.java  BlockColored.java  BlockCommandBlock.java  BlockCompressedPowered.java  BlockContainer.java  BlockCrops.java  BlockDaylightDetector.java  BlockDeadBush.java  BlockDirt.java  BlockDispenser.java  BlockDoor.java  BlockDoublePlant.java  BlockDragonEgg.java  BlockDropper.java  BlockEnchantmentTable.java  BlockEndPortal.java  BlockEndPortalFrame.java  BlockEnderChest.java  BlockEventData.java  BlockFalling.java  BlockFarmland.java  (+101 more)
src/main/java/net/minecraft/client/: ClientBrandEnum.kt  ClientBrandRetriever.kt  LoadingScreenRenderer.java  Minecraft.java
src/main/java/net/minecraft/command/: CommandBase.java  CommandBlockData.java  CommandClone.java  (+38 more)
src/main/java/net/optifine/: BlockPosM.java  ConnectedTextures.java  CustomColorFader.java  CustomColormap.java  CustomColors.java  CustomItemProperties.java  DynamicLights.java  Lagometer.java  Lang.java  NextTickHashSet.java  TextureAnimation.java  VersionCheckThread.java
src/main/kotlin/net/optifine/: Log.kt
src/main/resources/: log4j2.xml
src/print/: CasualPrinter.h  Logger.h
src/print/ansi_color/: ColorEnum.cpp  ColorEnum.h
src/test/kotlin/: Start.kt
src/wizard/stages/: FirstStage.h  SecondStage.h
src/wizard/utilities/: FileContentUtils.h  FilePathUtils.cpp  FilePathUtils.h
(+1110 files in other folders)
